<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="all_image">All Images</string>
    <string name="choose">Select</string>
    <string name="done">Done</string>
    <string name="done_num">Done(%1$s/%2$s)</string>
    <string name="file_error">File error</string>
    <string name="message_max_num">Up to %1$s photos can be selected</string>
    <string name="no_external">External storage device is not mounted, please check if there is a read/write permissions for app setting</string>
    <string name="num_postfix">%1$s</string>
    <string name="permission_disable">Get photo album must be authorized to read and write stored permissions</string>
    <string name="picture">Images</string>
    <string name="preview">Preview</string>
    <string name="preview_num">Preview(%1$s)</string>
    <string name="save_ing">Saving picture…</string>
    <string name="sdcard_error">SD card not loaded or damaged</string>
    <string name="take_picture">Take Photo</string>
    <string name="use">OK</string>
    <string name="customactivityoncrash_error_activity_close_app">Close app</string>
    <string name="customactivityoncrash_error_activity_error_details">Error details</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Error information</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Close</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Copied to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Copy to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Error details</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">"An unexpected error occurred.
Sorry for the inconvenience."</string>
    <string name="customactivityoncrash_error_activity_restart_app">Restart app</string>
    <string name="customactivityoncrash_error_activity_unknown_exception">Unknown exception</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="app_name">干将金融</string>
    <string name="bc">保存</string>
    <string name="bd">拨打</string>
    <string name="bdyx">绑定邮箱</string>
    <string name="by">本月</string>
    <string name="cg">成功</string>
    <string name="csd">财神道</string>
    <string name="cz">充值</string>
    <string name="czdlmm">重置登录密码</string>
    <string name="czje">充值金额</string>
    <string name="dialog_long_text">本收益为按天换算收益,不等于实际到账收益,到账收益请以资金记录为准</string>
    <string name="dlcg">登录成功</string>
    <string name="dlmm">登录密码</string>
    <string name="dlmmczcg">登录密码重置成功</string>
    <string name="dws">待完善</string>
    <string name="dxfs">短信已发送至</string>
    <string name="dxyfsz">短信已发送至</string>
    <string name="dzyx">电子邮箱</string>
    <string name="edit_loginpass">请输入登录密码</string>
    <string name="sfzhm">身份证号码</string>
    <string name="gd">更多</string>
    <string name="gjjryhxy">《干将金融用户协议》</string>
    <string name="gmjl">购买记录</string>
    <string name="yhlx">用户类型</string>
    <string name="gylx">雇佣类型</string>
    <string name="gywm">关于我们</string>
    <string name="gz">规则</string>
    <string name="hkfs">还款方式</string>
    <string name="hkfss">还款方式</string>
    <string name="hkxx">回款信息</string>
    <string name="hqyzm">获取验证码</string>
    <string name="hyzk">婚姻状况</string>
    <string name="jbxx">基本信息</string>
    <string name="jcyd">嘉财有道</string>
    <string name="jlb">嘉利宝</string>
    <string name="jmm">旧密码</string>
    <string name="jrjl">加入记录</string>
    <string name="jzdz">居住地址</string>
    <string name="khm">开户名:</string>
    <string name="khss">开户省市</string>
    <string name="khzh">开户支行</string>
    <string name="ksxejk">快速小额借款</string>
    <string name="lc">理财</string>
    <string name="ljty">立即体验</string>
    <string name="login">登录</string>
    <string name="login_pass">登录密码</string>
    <string name="lxrxx">联系人信息</string>
    <string name="name">姓名</string>
    <string name="nybdkfrxm">您要拨打客服热线吗?</string>
    <string name="phone">手机号码</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="qgxgjjryhxy">请勾选干将金融用户协议</string>
    <string name="qlwb">清理完毕</string>
    <string name="qqbdlmmyjymmbt">请确保登录密码与交易密码不同,提高账户安全保障</string>
    <string name="qqrxmm">请确认新密码</string>
    <string name="qr">确认</string>
    <string name="qrdlmm">确认登录密码</string>
    <string name="qrgm">确认购买</string>
    <string name="qrxmm">确认新密码</string>
    <string name="qsrdlmm">请输入登录密码</string>
    <string name="qsrdqsjh">请输入当前手机号!</string>
    <string name="qsrdzxxxx">请输入地址详细街道信息</string>
    <string name="qsrhfsfz">请输入合法身份证</string>
    <string name="qsrjmm">请输入旧密码</string>
    <string name="qsrjymm">请输入交易密码</string>
    <string name="qsrkhzh">请输入开户支行</string>
    <string name="qsrncydyxdz">请输入您常用的邮箱地址</string>
    <string name="qsrndsjh">请输入您的手机号</string>
    <string name="qsrndyhkh">请输入您的银行卡号</string>
    <string name="qsrndzjhm">请输入您的证件号码</string>
    <string name="qsrqrdlmm">请输入确认登录密码</string>
    <string name="qsrqrxmm">请输入确认新密码</string>
    <string name="qsrsfzhm">请输入身份证号码</string>
    <string name="qsrshrxm">请输入收货人姓名</string>
    <string name="qsrsjhm">请输入手机号码</string>
    <string name="qsrtxje">请输入提现金额</string>
    <string name="qsrtykmm">请输入体验卡密码</string>
    <string name="qsrxmm">请输入新密码</string>
    <string name="qsrxsjhm">请输入新手机号码</string>
    <string name="qsrxxjddz">请输入详细街道地址</string>
    <string name="qsrxyxdz">请输入新邮箱地址</string>
    <string name="qsryb">请输入邮编</string>
    <string name="qsryhkh">请输入银行卡号</string>
    <string name="qsryjfk">请输入意见反馈</string>
    <string name="qsryyxdz">请输入原邮箱地址</string>
    <string name="qsryzm">请输入验证码</string>
    <string name="qsrzqdsfz">请输入正确的身份证!</string>
    <string name="qsrzqdsjh">请输入正确的手机号</string>
    <string name="qsrzqdyb">请输入正确的邮编</string>
    <string name="qsrzqdyhkh">请输入正确的银行卡号</string>
    <string name="qsrzqdyxgs">请输入正确的邮箱格式</string>
    <string name="qsrzxqs1dsjhm">请选择直系亲属1的手机号码</string>
    <string name="qsrzxqs1dxm">直系亲属1的姓名</string>
    <string name="qtxzf">请填写6-20位字符，可由英文，数字和字符组成</string>
    <string name="qx">取消</string>
    <string name="qxs">期限</string>
    <string name="qxzjzdszss">请选择居住地址所在省市</string>
    <string name="qxzjzdzszss">请选择居住地址所在省市</string>
    <string name="qxzkhss">选择开户省市</string>
    <string name="qxzshss">请选择收货省市</string>
    <string name="qxzyh">请选择银行</string>
    <string name="qxzzjdzszss">请选择证件地址所在省市</string>
    <string name="qxzzjszss">请选择证件地址所在省市</string>
    <string name="qxzzxqs1dgx">请选择直系亲属1的关系</string>
    <string name="qzycs">短信已下发至您的手机,请注意查收</string>
    <string name="regist">注册</string>
    <string name="regist_login">注册或登录</string>
    <string name="registorlogin">请输入手机号进行注册或登录</string>
    <string name="rsbx">人寿保险</string>
    <string name="rzcg">认证成功!</string>
    <string name="select_phone">推荐人手机号(选填)</string>
    <string name="sfz">身份证</string>
    <string name="sfzbnwk">身份证不能为空!</string>
    <string name="shdz">收货地址</string>
    <string name="sjhm">手机号码</string>
    <string name="skrl">收款日历</string>
    <string name="smrz">实名认证</string>
    <string name="smrzydcgbnxg">实名认证一旦成功将不能修改</string>
    <string name="sr_loginpass">请输入登录密码!</string>
    <string name="srts">6-20位的字符，可包含数字、英文字母、符号</string>
    <string name="success">成功</string>
    <string name="syjsj">收益计算机</string>
    <string name="szdlmm">设置登录密码</string>
    <string name="szmm">设置密码</string>
    <string name="tcdl">退出登录</string>
    <string name="text_account">账号资金安全由银行保障</string>
    <string name="text_anquan">你我贷不会在任何地方泄露恁的密码</string>
    <string name="text_enter">确定</string>
    <string name="text_financing">理财</string>
    <string name="text_long_max">体验宝为干将金融平台推出的体验金专享产品,持有体验金的用户可以进行购买,产品到期后,收益自动发放至个人账户,可直接提现.</string>
    <string name="text_long_xjq">让好友用手机扫描二维码注册,好友投资后,你可以获得现金券奖励 (现金券可取现)</string>
    <string name="text_my">我的</string>
    <string name="text_next">下一步</string>
    <string name="text_selected">精选</string>
    <string name="tj">添加</string>
    <string name="tjr">推荐人</string>
    <string name="tjyhk">添加银行卡</string>
    <string name="tjyj">推荐有奖</string>
    <string name="tx">头像</string>
    <string name="txs">提现</string>
    <string name="tyb">体验宝</string>
    <string name="tzxm">投资项目</string>
    <string name="w">无</string>
    <string name="wbd">未绑定</string>
    <string name="wdjf">我的积分</string>
    <string name="wdsk">我的收款</string>
    <string name="wh">未婚</string>
    <string name="wlyc">网络异常,请检查网络!</string>
    <string name="wzdl">我知道了</string>
    <string name="xesm">限额说明</string>
    <string name="xgcg">修改成功</string>
    <string name="xgdlmm">修改登录密码</string>
    <string name="xgsjhm">修改手机号码</string>
    <string name="xgyxdz">修改邮箱地址</string>
    <string name="xjjl">现金奖励</string>
    <string name="xm">姓名</string>
    <string name="xmm">新密码</string>
    <string name="xsjhbnwk">新手机号不能为空</string>
    <string name="xxjddz">详细街道地址</string>
    <string name="xxsz">消息设置</string>
    <string name="xxxx">详细信息</string>
    <string name="xyhzx">新用户专享超高收益</string>
    <string name="xyx">新邮箱</string>
    <string name="ydztzc">有道智投资产</string>
    <string name="wsdzzh">徽商电子账号</string>
    <string name="yhkh">银行卡号</string>
    <string name="yhm">用户名</string>
    <string name="yjfk">意见反馈</string>
    <string name="zcswty">注册即视为同意</string>
    <string name="zhmm">找回密码</string>
</resources>