<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="moye.ganjiang.com.ganjiang.ui.activity.regist.RegistActivity">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toobar_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red1">

            <TextView
                android:id="@+id/tv_regist_toobar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/regist"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:background="@color/white"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <ImageView
                android:src="@drawable/logo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            style="@style/ll_ganjiang_text"
            android:layout_marginTop="10dip"

            >


            <EditText
                android:textSize="@dimen/front12"
                android:textCursorDrawable="@drawable/color_cursor"
                android:id="@+id/et_regist_phone"
               android:layout_height="match_parent"
                android:layout_width="0.0dip"
                android:layout_weight="2.0"
                android:background="@null"
                android:hint="请输入手机号码" />
        </LinearLayout>


        <LinearLayout
            style="@style/ll_ganjiang_text"
            android:baselineAligned="false">

            <EditText
                android:textSize="@dimen/front12"
                android:textCursorDrawable="@drawable/color_cursor"
                android:id="@+id/et_regist_loginpass"
                android:layout_height="match_parent"
                android:layout_width="0.0dip"
                android:layout_weight="2.0"
                android:background="@null"
                android:hint="@string/edit_loginpass"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.2"
                android:gravity="right"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_regist_showpass"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="15.0dip"
                    android:background="@null"
                    android:button="@drawable/checkbox_pass"
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/ll_ganjiang_text">



            <EditText
                android:textSize="@dimen/front12"
                android:textCursorDrawable="@drawable/color_cursor"
                android:id="@+id/et_regist_yzm"
                style="@style/et_ganjiang_text"
                android:layout_width="0.0dip"
                android:layout_weight="2.0"
                android:hint="@string/qsryzm" />

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.2"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <View
                    style="@style/solid_vertical_view"
                    android:layout_marginBottom="15.0dip"
                    android:layout_marginTop="15.0dip" />

                <TextView
                    android:id="@+id/tv_regist_yzm"
                    android:layout_width="120dip"
                    android:layout_height="44dip"
                    android:layout_marginLeft="15.0dip"
                    android:background="@drawable/bg_identify_code_normal"
                    android:clickable="true"
                    android:layout_gravity="center_vertical"
                    android:lines="1"
                    android:text="验证码"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="12.0sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.0dip"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_regist_xy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15.0dip"
                android:background="@null"
                android:button="@null"
                android:drawableLeft="@drawable/checkbox_regist"
                android:drawablePadding="5.0dip"
                android:text="@string/zcswty"
                android:textColor="@color/text_phone_gray"
                android:textSize="15.0sp" />

            <TextView
                android:id="@+id/tv_regist_yhxy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5.0dip"
                android:clickable="true"
                android:gravity="right"
                android:text="聚车金融用户协议"
                android:textColor="@color/red1"
                android:textSize="14.0sp" />
        </LinearLayout>

        <Button
            android:id="@+id/fbtn_login_enter"
            style="@style/button_text_orange"
            android:layout_marginTop="20.0dip"
            android:text="注册" />

        <TextView
            style="@style/text_anquan_gray"
            android:drawableLeft="@mipmap/safe_icon"
            android:drawablePadding="6.0dip"
            android:gravity="center_vertical"
            android:text="@string/text_account" />
    </LinearLayout>


</LinearLayout>

